Add BoxEvent api endpoints
