# server/routes/web.php
@@ -22,7 +22,6 @@ use App\Http\Controllers\Auth\LoginController;
 use App\Http\Controllers\CharityBoxApiController;
 use App\Http\Controllers\CharityBoxController;
 use App\Http\Controllers\CollectorController;
-use App\Http\Controllers\LogsApiController;
 use App\Http\Controllers\LogsController;
 use App\Http\Controllers\MainController;
 use App\Http\Controllers\UserController;
@@ -179,11 +178,6 @@ Route::prefix('liczymy')->group(function () {
             //Anulowanie zatwierdzenia puszek
             Route::post('unverify', [CharityBoxApiController::class, 'postUnVerify'])->name('api.box.unverify');
 
-        });
-
-        Route::prefix('logs')->group(function (){
-            Route::get('all', [LogsApiController::class, 'getAll'])->name('api.logs.all');
-            Route::get('box/{boxID}', [LogsApiController::class, 'getBox'])->name('api.logs.box');
         });
     });
 });
