# server/storage/api-docs/api-docs.json
@@ -407,16 +407,6 @@
                 "summary": "Get list of verified charity boxes",
                 "description": "Returns list of charity boxes",
                 "operationId": "getVerifiedList",
-                "parameters": [
-                    {
-                        "name": "Authorization",
-                        "in": "header",
-                        "description": "Enter token in format (Basic base64(username:password))",
-                        "schema": {
-                            "type": "basic"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "Successful operation",
@@ -1086,6 +1076,74 @@
                 }
             }
         },
+        "/logs": {
+            "get": {
+                "tags": [
+                    "BoxEvent"
+                ],
+                "summary": "Get list of box events - logs",
+                "description": "Returns list of Logs",
+                "operationId": "getBoxEventsList",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/BoxEvents"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/logs/box/{id}": {
+            "get": {
+                "tags": [
+                    "BoxEvent"
+                ],
+                "summary": "Get charity box events - logs",
+                "description": "Returns charity box Logs",
+                "operationId": "getBoxEventsByBox",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Charity Box id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": "1"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/BoxEvents"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/currency/rates": {
             "get": {
                 "tags": [
@@ -1334,6 +1392,19 @@
                         "type": "array",
                         "items": {
                             "$ref": "#/components/schemas/Collector"
+                        }
+                    }
+                },
+                "type": "object"
+            },
+            "BoxEvents": {
+                "title": "BoxEvents",
+                "properties": {
+                    "data": {
+                        "title": "data",
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/BoxEvent"
                         }
                     }
                 },
@@ -2092,6 +2163,16 @@
             "bearerAuth": {
                 "type": "http",
                 "scheme": "basic"
+            },
+            "sanctum": {
+                "type": "basic",
+                "description": "Enter token in format (Bearer <token>)",
+                "name": "Authorization",
+                "in": "header"
+            },
+            "basic": {
+                "type": "basic",
+                "description": "HTTP Basic Authentication with username and password."
             }
         }
     },
@@ -2111,6 +2192,10 @@
         {
             "name": "CharityBoxScore",
             "description": "API Endpoints for currencies and rates"
+        },
+        {
+            "name": "BoxEvent",
+            "description": "API Endpoints for charity box events - logs"
         },
         {
             "name": "Rates",
